Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34856

Qt-4.8.5 64-bit build fail with mingw-w64 runtime 3.0.1

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • 4.8.6
    • 4.8.5
    • Core: Other
    • None
    • Windows 7 64-bit, mingw-w64 gcc-4.8.2 toolchain with runtime v.3.0.1
    • 0afca3160d8abbe200dfde52acf90f13b57017a9

    Description

      Building Qt-4.8.5 64-bit with our toolchain x86_64-4.8.2-release-posix-seh-rt_v3-rev leading to error:

      g++ -c -include tmp/obj/debug_shared/qt_pch.h -march=nocona -mtune=core2 -pipe -fno-keep-inline-dllexport -g -Wall -Wextra -frtti -fexceptions -mthreads -DQT_SHARED -DQT_THREAD_SUPPORT -DUNICODE -DQT_BUILD_CORE_LIB -DQT_NO_USING_NAMESPACE -DQT_MAKEDLL -DQT_ASCII_CAST_WARNINGS -DQT3_SUPPORT -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -D_USE_MATH_DEFINES -DQLIBRARYINFO_EPOCROOT -DHB_EXPORT=Q_CORE_EXPORT -DQT_DLL -DQT_HAVE_MMX -DQT_HAVE_SSE -DQT_HAVE_MMXEXT -DQT_HAVE_SSE2 -I'../../include' -I'c:/test/DEVs/toolchains_posix/mingw64/x86_64-w64-mingw32/include' -I'c:/test/prerequisites-x86_64/include' -I'c:/test/Qt-4.8.5-x86_64-opengl/databases/firebird/include' -I'c:/test/Qt-4.8.5-x86_64-opengl/databases/mysql/include/mysql' -I'c:/test/Qt-4.8.5-x86_64-opengl/databases/pgsql/include' -I'../../include/QtCore' -I'tmp/rcc/debug_shared' -I'tmp' -I'global' -I'../../tools/shared' -I'../3rdparty/harfbuzz/src' -I'../3rdparty/md5' -I'../3rdparty/md4' -I'../../include/ActiveQt' -I'tmp/moc/debug_shared' -I'c:/test/DEVs/toolchains_posix/mingw64/x86_64-w64-mingw32/include' -I'c:/test/prerequisites-x86_64/include' -I'c:/test/Qt-4.8.5-x86_64-opengl/databases/firebird/include' -I'c:/test/Qt-4.8.5-x86_64-opengl/databases/mysql/include/mysql' -I'c:/test/Qt-4.8.5-x86_64-opengl/databases/pgsql/include' -I'c:/test/Qt-4.8.5-x86_64-opengl/databases/oci/include' -I'../../mkspecs/win32-g++-4.6' -o tmp/obj/debug_shared/qsimd.o tools/qsimd.cpp
      g++ -c -include tmp/obj/debug_shared/qt_pch.h -march=nocona -mtune=core2 -pipe -fno-keep-inline-dllexport -g -Wall -Wextra -frtti -fexceptions -mthreads -DQT_SHARED -DQT_THREAD_SUPPORT -DUNICODE -DQT_BUILD_CORE_LIB -DQT_NO_USING_NAMESPACE -DQT_MAKEDLL -DQT_ASCII_CAST_WARNINGS -DQT3_SUPPORT -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -D_USE_MATH_DEFINES -DQLIBRARYINFO_EPOCROOT -DHB_EXPORT=Q_CORE_EXPORT -DQT_DLL -DQT_HAVE_MMX -DQT_HAVE_SSE -DQT_HAVE_MMXEXT -DQT_HAVE_SSE2 -I'../../include' -I'c:/test/DEVs/toolchains_posix/mingw64/x86_64-w64-mingw32/include' -I'c:/test/prerequisites-x86_64/include' -I'c:/test/Qt-4.8.5-x86_64-opengl/databases/firebird/include' -I'c:/test/Qt-4.8.5-x86_64-opengl/databases/mysql/include/mysql' -I'c:/test/Qt-4.8.5-x86_64-opengl/databases/pgsql/include' -I'../../include/QtCore' -I'tmp/rcc/debug_shared' -I'tmp' -I'global' -I'../../tools/shared' -I'../3rdparty/harfbuzz/src' -I'../3rdparty/md5' -I'../3rdparty/md4' -I'../../include/ActiveQt' -I'tmp/moc/debug_shared' -I'c:/test/DEVs/toolchains_posix/mingw64/x86_64-w64-mingw32/include' -I'c:/test/prerequisites-x86_64/include' -I'c:/test/Qt-4.8.5-x86_64-opengl/databases/firebird/include' -I'c:/test/Qt-4.8.5-x86_64-opengl/databases/mysql/include/mysql' -I'c:/test/Qt-4.8.5-x86_64-opengl/databases/pgsql/include' -I'c:/test/Qt-4.8.5-x86_64-opengl/databases/oci/include' -I'../../mkspecs/win32-g++-4.6' -o tmp/obj/debug_shared/qsize.o tools/qsize.cpp
      tools/qsimd.cpp: In function 'uint detectProcessorFeatures()':
      tools/qsimd.cpp:296:23: error: '__cpuid' was not declared in this scope
              __cpuid(info, 1);
                             ^
      Makefile.Debug:22172: recipe for target 'tmp/obj/debug_shared/qsimd.o' failed
      

      In attach proposed patch for this issue.

      Attachments

        For Gerrit Dashboard: QTBUG-34856
        # Subject Branch Project Status CR V

        Activity

          People

            kleint Friedemann Kleint
            alexpux Alexey Pavlov
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes