src/corelib/tools/qsimd.cpp
@@ -47,7 +47,7 @@
 #include <windows.h>
 #endif
 
-#if defined(Q_OS_WIN64) && !defined(Q_CC_GNU)
+#if defined(Q_OS_WIN64)
 #include <intrin.h>
 #endif
 
